--- a/AdultSitter/AdultSitter.csproj
+++ b/AdultSitter/AdultSitter.csproj
@@ -7,6 +7,13 @@
   <ItemGroup>
     <PackageReference Include="Line.Messaging" Version="1.4.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
